--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,19 @@ plugins {
     id 'java'
 }
 
-group '3321-Project'
 version '1.0-SNAPSHOT'
+
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile (
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1']
+    )
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
